# jepa-intuitive-physics

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  fabfile.py  figures.ipynb  pyproject.toml
configs/: eval.yaml
configs/data/: _base.yaml  grasp.yaml  inflevel_lab.yaml  intphys.yaml  intphys2.yaml
configs/experiment/grasp/: jepa_vith.yaml  maev2_vitg.yaml  sigma_vitb_dino.yaml
configs/experiment/inflevel_lab/: jepa_vith_32.yaml  jepa_vitl.yaml  jepa_vitl_32.yaml  maev2_vitg_32.yaml  sigma_dino_vitb.yaml  sigma_dino_vitb_32.yaml
configs/experiment/intphys/: jepa2_vith.yaml  jepa2_vith_48.yaml  jepa_vith.yaml  jepa_vitl.yaml  maev2_vitg.yaml  sigma_vitb_dino.yaml  sigma_vitb_mlp.yaml
configs/experiment/intphys2/: jepa-vith.yaml  jepa2_vith_16.yaml  jepa2_vith_48.yaml  jepa_vith.yaml  maev2_vitg.yaml  sigma_dino_vitb.yaml
configs/hydra/launcher/: slurm.yaml
configs/model/: jepa_vitl.yaml
configs/model/jepa/: _base.yaml  vith.yaml  vitl.yaml
configs/model/jepa2/: vith.yaml
configs/model/maev2/: vitg.yaml
configs/model/sigma/: vitb.yaml  vitb_dino.yaml  vitb_mlp.yaml
evaluation_code/evals/: main.py  main_distributed.py  scaffold.py
evaluation_code/evals/intphys_test/: data_manager.py  eval.py  intphys_dataset.py  utils.py  videomae.py
evaluation_code/evals/intuitive_physics/: data_manager.py  eval.py  grasp_dataset.py  inflevel_dataset.py  intphys_dataset.py  sigma.py  utils.py  videomae.py
evaluation_code/src/masks/: causal.py  multiblock3d.py  random.py  random_tube.py
evaluation_code/src/models/: predictor.py  vision_transformer.py
evaluation_code/src/utils/: distributed.py  logging.py  monitoring.py  tensors.py  transforms.py
experiments/surprise_viz/: README.md  main.py
intphyseval/: _main_v2.py  main_v2.py  main_v3.py  utils.py
intphyseval/data/: grasp_dataset.py  grasp_dataset_v2.py  inflevel_dataset.py  inflevel_dataset_v2.py  intphys2_dataset.py  intphys_dataset.py  intphys_dataset_v2.py  sliding_window_dataset.py
intphyseval/model/jepa/: net.py
intphyseval/model/mae/: net.py  (+1 more)
scripts/: generate_metadata_grasp.py  generate_metadata_inflevel.py  generate_metadata_intphys.py
(+54 files in other folders)
